fixed form spacing on desktop

--- a/styles/Contact.module.css
+++ b/styles/Contact.module.css
@@ -1,6 +1,6 @@
 .container {
 	min-height: 100vh;
-	max-width: 65rem;
+	max-width: 100vw;
 	padding: 0 0.5rem;
 	display: flex;
 	flex-direction: column;
@@ -12,6 +12,7 @@
 	font-weight: 300;
 	font-family: var(--title-font);
 	margin-bottom: 2rem;
+	margin-left: -4rem;
 	color: var(--title-color);
 	text-decoration: underline;
 	text-decoration-color: var(--accent-color);
